--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,15 @@
 .irs-bar-edge {background: #DF691A;}
 .irs-from {background: #DF691A;}
 .irs-to {background: #DF691A;}
+
+.btn-facebook {
+  background: #428BCA;
+  color: #FFFFFF;
+}
+
+.btn {
+    padding: 10px 16px;
+    font-size: 14px;
+    line-height: 1.33;
+    border-radius: 6px;
+}
