fix: suggestions from Matt S

--- a/src/style.css
+++ b/src/style.css
@@ -29,3 +29,7 @@
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus{
   border-radius: 6px;
 }
+
+.text-muted {
+    color: #777;
+}
