--- a/app/style.css
+++ b/app/style.css
@@ -40,3 +40,12 @@
   font-size: 18px;
   
 }
+
+/*question text formatter in the input UI*/
+.questiontext {
+  font-size: 12px;
+  display: inline-block;
+  max-width: 100%;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
